--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@ layout: main
     {% if site.show_hero and paginator == nil or paginator.page == 1 %}
         <!-- Hero -->
         {% assign featured = posts.first %}
-        <section class="hero" style="background-image: url(/assets/img/banner.png)">
+        <section class="hero" style="background-image: url(./assets/img/banner.png)">
             <div class="pixels"></div>
             <div class="gradient"></div>
             <div class="content">
