--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@
                 <p class="post-subtitle">{{ page.subtitle }}</p>
 
                 {% if page.image and paginator.activated == nil %}
-                    <img src="{{ page.image }}" alt="Featured image" class="post-cover">
+                    <img src="{{ page.image | prepend: site.baseurl }}" alt="Featured image" class="post-cover">
                 {% endif %}
 
                 {% include pagination-post.html progressBar=true %}
@@ -42,11 +42,11 @@
                         {% assign shuffled_array = next_posts | shuffle %}
                         {% for post in shuffled_array limit:3 %}
                             <li>
-                                <a href="{{ post.url | prepend: site.baseurl }}">
+                                <a href="{{ prepend: site.baseurl }}">
                                     {% if post.optimized_image %}
-                                        <img src="{{ post.optimized_image }}">
+                                        <img src="{{ post.optimized_image | prepend: site.baseurl }}">
                                     {% elsif post.image %}
-                                        <img src="{{ post.image }}">
+                                        <img src="{{ post.image | prepend: site.baseurl }}">
                                     {% else %}
                                         <img src="/assets/img/off.jpg">
                                     {% endif %}
