--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,7 @@
                         {% assign shuffled_array = next_posts | shuffle %}
                         {% for post in shuffled_array limit:3 %}
                             <li>
-                                <a href="{{ prepend: site.baseurl }}">
+                                <a href="{{ post.url | prepend: site.baseurl }}">
                                     {% if post.optimized_image %}
                                         <img src="{{ post.optimized_image | prepend: site.baseurl }}">
                                     {% elsif post.image %}
