tried fixing post image preview

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,9 +44,9 @@
                             <li>
                                 <a href="{{ post.url | prepend: site.baseurl }}">
                                     {% if post.optimized_image %}
-                                        <img src="{{ post.optimized_image | prepend: site.baseurl }}">
+                                        <img src="{{ post.optimized_image }}">
                                     {% elsif post.image %}
-                                        <img src="{{ post.image | prepend: site.baseurl }}">
+                                        <img src="{{ post.image }}">
                                     {% else %}
                                         <img src="/assets/img/off.jpg">
                                     {% endif %}
